2006-07-27  Dominik Meister  <meister@greenmail.ch>

	* plugins/SmartPlaylists/QueryBuilderModel.cs: Set more convenient default
	values when searching in the year column (BGO #348987)

2006-07-23  Dominik Meister  <meister@greenmail.ch>

	* plugins/SmartPlaylists/QueryBuilder.cs:
	* plugins/SmartPlaylists/QueryBuilderModel.cs: Add special equal/not-equal
	operators for strings to support case-insensitive string matches (BGO
	#348366).

2006-07-20  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/SmartPlaylist/Plugin.cs: Add Dominik Meister to Authors.

2006-07-20  Gabriel Burt  <gabriel.burt@gmail.com>

	* banshee-official-plugins.mds: Add SmartPlaylits project to MonoDevelop
	solution.

	* plugins/SmartPlaylists/SmartPlaylists.mdp: new project for
	SmartPlaylists plugin.  Still needs references to Banshee libs.

2006-07-20  Dominik Meister  <meister@greenmail.ch>

	* plugins/SmartPlaylists/Plugin.cs: Add menu for creating smart playlist
	from search (BGO #348054).

	* plugins/SmartPlaylists/Editor.cs: Add SetQueryFromSearch method that
	takes the search query the user has entered and converts it into a
	condition statement that the existing smart playlist logic can use.

2006-07-19  Patrick van Staveren  <trick@vanstaveren.us>

	* plugins/Recommendation/RecommendationPane.cs:
	double-escape comma, ampersand, and question mark like we
	do with slashes

2006-07-19  Aaron Bockover  <abock@gnome.org>

	* banshee-official-plugins.mds: Added Podcast project

	* plugins/Recommendation/Recommendation.mdp: Added new files

	* plugins/Recommendation/RecommendationUtilities.cs: Moved utility
	methods to a separate internal static class

	* plugins/Recommendation/RecommendationPlugin.cs: Minor fixes and
	clean up for QA/review

	* plugins/Recommendation/RecommendationPane.cs: More clean up and 
	refactoring; added 'no results' view for artists

	* plugins/Recommendation/Makefile.am: 
	* plugins/Podcast/Makefile.am: Updated build
