@@ -1,3 +1,15 @@
+2006-07-28  Gabriel Burt  <gabriel.burt@gmail.com>
+
+	* plugins/SmartPlaylists/Plugin.cs: Add timers for testing speed of
+	operations (commented out).  Change playlist watching to work with
+	proposed patch to core.
+
+	* plugins/SmartPlaylists/Editor.cs:
+	* plugins/SmartPlaylists/SmartPlaylist.cs: Add timers.
+
+	* plugins/SmartPlaylists/SmartPlaylists.mdp: Add Banshee and System.Data
+	refs.
+
 2006-07-27  Dominik Meister  <meister@greenmail.ch>
 
 	* plugins/SmartPlaylists/QueryBuilderModel.cs: Set more convenient default
